# atom_tasks

first_task/: CMakeLists.txt  main.cpp
first_task/build_lin/: CMakeCache.txt  GeoPoints  Makefile  cmake_install.cmake
first_task/headders/: GeoPointProcessor.h  vars.h
first_task/source/: GeoPointProcessor.cpp  vars.cpp
second_task/: CMakeLists.txt  main.cpp  readme.txt
second_task/headders/: graph.h  point.h
second_task/source/: graph.cpp  point.cpp
third_task/: CMakeLists.txt  main.cpp
third_task/headders/: edge.h  graph.h  point.h
third_task/source/: edge.cpp  graph.cpp  point.cpp
